--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -75,8 +75,17 @@
       </div>
     </div>
 
-    <div id="room_block_container" class="row pt-7 pb-5">
-      <% if current_user.role.get_permission("can_create_rooms") %>
+
+   <div id="room_block_title" class="row pt-7 pb-1">
+    <% if current_user.role.get_permission("can_create_rooms") %>
+      <div class="col-lg-8 col-sm-12">
+         <h1 id="user-text" class="display-55555 text-left mb-3 font-weight-400" contenteditable="false">Meine Räume</h1> 
+      </div>
+    <% end %>  
+   </div>
+   
+   <div id="room_block_container" class="row pt-1 pb-5">
+     <% if current_user.role.get_permission("can_create_rooms") %>
         <% current_user.ordered_rooms.each do |room| %>
           <div class="col-lg-4 col-md-6 col-sm-12">
             <%= link_to room do %>
